--- a/hello-pinecone.ipynb
+++ b/hello-pinecone.ipynb
@@ -1,29 +1,32 @@
-{
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from getpass import getpass \n",
-    "import os\n",
-    "pinecone_api_key = getpass('Enter your Pinecone API Key: ')\n",
-    "os.environ[\"PINECONE_API_KEY\"] = pinecone_api_key"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.12.2"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
-}
+from getpass import getpass 
+from pinecone import Pinecone
+
+
+import os
+pinecone_api_key = getpass('Enter your Pinecone API Key: ')
+os.environ["PINECONE_API_KEY"] = pinecone_api_key
+pc = Pinecone(api_key=pinecone_api_key)
+index = pc.Index("quickstart")
+
+index.upsert(
+    vectors=[
+        {
+            "id": "vec1", 
+            "values": [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1], 
+            "metadata": {"genre": "drama"}
+        }, {
+            "id": "vec2", 
+            "values": [0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2], 
+            "metadata": {"genre": "action"}
+        }, {
+            "id": "vec3", 
+            "values": [0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3], 
+            "metadata": {"genre": "drama"}
+        }, {
+            "id": "vec4", 
+            "values": [0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4], 
+            "metadata": {"genre": "action"}
+        }
+    ],
+    namespace= "ns1"
+)
