--- a/hello-pinecone.ipynb
+++ b/hello-pinecone.ipynb
@@ -1,35 +1,57 @@
-!pip install -qU \
-  pinecone-client==3.1.0
-
-from getpass import getpass 
-from pinecone import Pinecone
-
-
-import os
-pinecone_api_key = getpass('Enter your Pinecone API Key: ')
-os.environ["PINECONE_API_KEY"] = pinecone_api_key
-pc = Pinecone(api_key=pinecone_api_key)
-index = pc.Index("quickstart")
-
-index.upsert(
-    vectors=[
-        {
-            "id": "vec1", 
-            "values": [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1], 
-            "metadata": {"genre": "drama"}
-        }, {
-            "id": "vec2", 
-            "values": [0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2], 
-            "metadata": {"genre": "action"}
-        }, {
-            "id": "vec3", 
-            "values": [0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3], 
-            "metadata": {"genre": "drama"}
-        }, {
-            "id": "vec4", 
-            "values": [0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4], 
-            "metadata": {"genre": "action"}
-        }
-    ],
-    namespace= "ns1"
-)
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from getpass import getpass \n",
+    "from pinecone import Pinecone\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "pinecone_api_key = getpass('Enter your Pinecone API Key: ')\n",
+    "os.environ[\"PINECONE_API_KEY\"] = pinecone_api_key\n",
+    "pc = Pinecone(api_key=pinecone_api_key)\n",
+    "index = pc.Index(\"quickstart\")\n",
+    "\n",
+    "index.upsert(\n",
+    "    vectors=[\n",
+    "        {\n",
+    "            \"id\": \"vec1\", \n",
+    "            \"values\": [0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1, 0.1], \n",
+    "            \"metadata\": {\"genre\": \"drama\"}\n",
+    "        }, {\n",
+    "            \"id\": \"vec2\", \n",
+    "            \"values\": [0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2], \n",
+    "            \"metadata\": {\"genre\": \"action\"}\n",
+    "        }, {\n",
+    "            \"id\": \"vec3\", \n",
+    "            \"values\": [0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3, 0.3], \n",
+    "            \"metadata\": {\"genre\": \"drama\"}\n",
+    "        }, {\n",
+    "            \"id\": \"vec4\", \n",
+    "            \"values\": [0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4, 0.4], \n",
+    "            \"metadata\": {\"genre\": \"action\"}\n",
+    "        }\n",
+    "    ],\n",
+    "    namespace= \"ns1\"\n",
+    ")\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.12.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
